force-app/main/default/objects/Staff__c/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Staff Profiles</relationshipLabel>
    <relationshipName>Staff_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>