force-app/main/default/objects/Staff__c/fields/Staff_Role__c.field-meta.xml
<CustomField>
    <fullName>Staff_Role__c</fullName>
    <label>Staff Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital Admin</fullName>
            </value>
            <value>
                <fullName>Department Head</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Lab Head</fullName>
            </value>
            <value>
                <fullName>Lab Assistant</fullName>
            </value>
            <value>
                <fullName>Reception Head</fullName>
            </value>
            <value>
                <fullName>Receptionist</fullName>
            </value>
            <value>
                <fullName>Pharmacy Manager</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Finance Head</fullName>
            </value>
            <value>
                <fullName>Payroll Manager</fullName>
            </value>
            <value>
                <fullName>Billing Manager</fullName>
            </value>
            <value>
                <fullName>Billing Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>